# ai-sessions-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
src/ai_sessions_manager/: __init__.py  __main__.py  app.py  app_protocol.py  clipboard.py  colors.py  config.py  deletion.py  index.py  launcher.py  modals.py  names.py  project_folders.py  project_names.py  session.py  styles.tcss
src/ai_sessions_manager/providers/: __init__.py  base.py  claude.py  codex.py  goose.py  opencode.py
src/ai_sessions_manager/screens/: folder.py  projects.py  providers.py  search.py  sessions.py  worktrees.py
src/ai_sessions_manager/widgets/: preview.py
src/multi_claude/: __init__.py  __main__.py  app.py  app_protocol.py  colors.py  config.py  deletion.py  discovery.py  filtering.py  formatting.py  index.py  launcher.py  modals.py  names.py  path_complete.py  project_names.py  session.py
src/multi_claude/providers/: __init__.py  base.py  claude.py  codex.py
src/multi_claude/screens/: folder.py  projects.py  providers.py  search.py  sessions.py  worktrees.py
src/multi_claude/widgets/: preview.py
tests/: conftest.py  test_app_integration.py  test_cleanup.py  test_clipboard.py  test_colors.py  test_config.py  test_deletion.py  test_discovery.py  test_filtering.py  test_formatting.py  test_index.py  test_launcher.py  test_merge.py  test_names.py  test_path_complete.py  test_project_folders.py  test_project_names.py  test_providers.py  test_session.py  test_worktrees.py
