[project]
name = "multi-claude"
version = "0.1.0"
description = "TUI to browse and resume Claude Code projects and sessions"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Jesús Lorenzo", email = "jesus.lorenzo@factorlibre.com" },
]
dependencies = [
    "textual>=0.80",
]

[project.scripts]
mc = "multi_claude.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multi_claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
